Fixes dashboard module display (vertical align)

--- a/views/classy_cate.less
+++ b/views/classy_cate.less
@@ -85,6 +85,9 @@ th.grade-column {
 
 .module_table tr {
   height : 30px;
+  td {
+    vertical-align: middle;
+  }
 }
 
 #exercises_table > tbody > tr >  td {
